# ownership-proxy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
contracts/: ownership_proxy.vy  proxy.vy  proxy_layout.json
contracts/interfaces/: IInterval.vyi  IWhitelist.vyi
contracts/permissions/: cooldown.vy  interval.vy  whitelist.vy
ownership_proxy/: proxy.vy
ownership_proxy/interfaces/: ICooldown.vyi  IProxy.vyi
ownership_proxy/permissions/: interval.vy  whitelist.vy
tests/: conftest.py  test_call_forwarding.py
tests/mocks/: caller.vy  dummy_factory.vy  mock_checker.vy  passthrough_checker.vy
tests/permissions/cooldown/: test_cooldown_add.py  test_cooldown_add_from_days.py  test_cooldown_add_from_hours.py  test_cooldown_check_and_reset.py
tests/permissions/interval/: test_interval_add.py  test_interval_add_singleton.py  test_interval_check.py
tests/permissions/whitelist/: test_whitelist_add.py  test_whitelist_check.py  test_whitelist_remove.py
tests/proxy/: test_proxy__default__.py  test_proxy_access_control.py  test_proxy_call_forwarding.py  test_proxy_default_with_checker.py  test_proxy_kill_delegation.py  test_proxy_set_delegation.py
tests/unitary/permissions/cooldown/: test_internal_add_from_days.py  test_internal_add_from_hours.py
tests/unitary/permissions/interval/: test_interval_add.py  test_interval_add_singleton.py  test_interval_check.py
tests/unitary/permissions/whitelist/: test_internal_add.py
tests/unitary/proxy/: test__default__.py  test_set_delegation.py
tests/utils/: constants.py  deployers.py
