[project]
name = "ownership-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curve-std",
    "snekmate==0.1.2",
    "vyper==0.4.3",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
force-include = {"contracts" = "ownership_proxy"}

[tool.uv]
dev-dependencies = [
    "pytest-xdist>=3.7.0",
    "titanoboa==0.2.7",
]

[tool.uv.sources]
curve-std = { git = "https://github.com/curvefi/curve-std", rev = "6db238291a62eee43446a0f86323f071e5a001eb" }